testsuite/tests/parse-errors/local_open_in_constructor_arguments.compilers.reference
module A : sig type r type s type t end
Line 5, characters 44-46:
5 | type this_is_rejected = Foo of A.(r * s * t);;
                                                ^^
Error: Syntax error
Line 2, characters 57-59:
2 | type as_a_consquence_this_is_also_rejected = Foo of A.(r);;
                                                             ^^
Error: Syntax error
Line 5, characters 45-46:
5 | type rejected_for_consistency = Foo of A.(r) * A.(s);;
                                                 ^
Error: Syntax error
type this_is_accepted = Foo of (A.r * A.s * A.t)
Line 4, characters 36-38:
4 | type this_is_not_supported = A.(Foo of r * s * t);;
                                        ^^
Error: Syntax error

